# ruyi-agent

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
.ruyi_agent/: ruyi.toml
.ruyi_agent/config/: agents.toml  llm_providers.toml  permissions.toml
config/: agents.toml  agents.toml.example  llm_providers.toml  mcp_servers.toml
docs/: configuration.zh-CN.md
scripts/: probe_openai_codex.py
src/ruyi_agent/: __init__.py  __main__.py
src/ruyi_agent/channels/: gateway_client.py
src/ruyi_agent/config/: loader.py  paths.py  runtime_settings.py
src/ruyi_agent/entrypoints/: main.py
tests/: conftest.py
tests/unit/: test_agent_turn.py  test_app_runtime.py  test_artifact_publishing_middleware.py  test_async_subagent_runtime.py  test_backend_runtime.py  test_config_loader.py  test_controller.py  test_delegation_context.py  test_entrypoint_cli.py  test_feishu_adapter.py  test_gateway_client.py  test_gateway_http.py  test_human_approval_middleware.py  test_interactive_cli.py  test_local_async_subagent_middleware.py  test_mcp_registry.py  test_openai_codex_model.py  test_packaging.py  test_permission_policy.py  test_probe_openai_codex.py  test_protocol.py  test_review_audit.py  test_runtime_middleware_stack.py  test_runtime_settings.py  test_ruyi_paths.py  test_ruyi_skills_middleware.py  test_skills_catalog.py  test_skills_resolver.py  test_skills_sync.py  test_stream_output.py  test_task_store.py  test_telegram_adapter.py  test_tool_error_integration.py  test_tool_error_middleware.py  test_tool_search_middleware.py
(+57 files in other folders)
